syntax = "proto3";

option go_package = "github.com/kintohub/kinto-cli/internal/types";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "enterprise_models.proto";

// Public API info related to a cluster
message PublicClusterInfo {
    string id = 1;
    string displayName = 2;
    string hostName = 3;
    google.protobuf.Timestamp createdAt = 5;
    string webHostName = 6;
}

message ClustersResponse {
    repeated PublicClusterInfo clusters = 1;
}

message ClusterEnvironmentsResponse {
    repeated ClusterEnvironment envs = 2;
}

message CreateAccessTokenRequest {
    string clusterId = 1;
    string envId = 2;
}

message CreateAccessTokenResponse {
    string accessToken = 1;
    string clusterId = 2;
    string envId = 3;
}

message CreateClusterEnvironmentRequest {
    string clusterId = 1;
    string name = 2;
}

// Separated Cluster Service from Master Service
// Master service should be protected for internal calls only
// Cluster service is used for the dashboard/users to get information about clusters and their environments
service ClusterService {
    rpc GetClusters(google.protobuf.Empty) returns (ClustersResponse) {}
    rpc GetClusterEnvironments(google.protobuf.Empty) returns (ClusterEnvironmentsResponse) {} // request authorization session token
    rpc CreateAccessToken(CreateAccessTokenRequest) returns (CreateAccessTokenResponse) {} // request authorization session token
    rpc CreateClusterEnvironment(CreateClusterEnvironmentRequest) returns (CreateAccessTokenResponse) {} // request authorization session token
}
